[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bfdn"
description = ''
# readme = "README.md"
requires-python = ">=3.7"
version = "0.0.1"
license = "MIT"
keywords = []
authors = [
  { name = "Aaron Niskin", email = "amniskin@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "daggerml[complete]==0.0.12",
  "executor-s3"
]

[project.urls]
Documentation = "https://github.com/unknown/bfdn#readme"
Issues = "https://github.com/unknown/bfdn/issues"
Source = "https://github.com/unknown/bfdn"

[tool.hatch.envs.main]
python = "310"
dependencies = [
  "metaflow",
  "pandas",
  "pyarrow",
  "boto3",
  "s3fs",
  "daggerml",
  "executor-s3",
]

[tool.hatch.envs.repro]
python="38"
dependencies = [
  "metaflow",
  "absl-py==1.4.0",
  "cachetools==5.2.1",
  "certifi==2022.12.7",
  "charset-normalizer==3.0.1",
  "contourpy==1.0.7",
  "cycler==0.11.0",
  "fonttools==4.38.0",
  "google-auth==2.16.0",
  "google-auth-oauthlib==0.4.6",
  "grpcio==1.51.1",
  "h5py==3.7.0",
  "idna==3.4",
  "imageio==2.24.0",
  "importlib-metadata==6.0.0",
  "kiwisolver==1.4.4",
  "markdown==3.4.1",
  "markupsafe==2.1.2",
  "matplotlib==3.6.3",
  "networkx==3.0",
  "numpy==1.24.1",
  "nvidia-cublas-cu11==11.10.3.66",
  "nvidia-cuda-nvrtc-cu11==11.7.99",
  "nvidia-cuda-runtime-cu11==11.7.99",
  "nvidia-cudnn-cu11==8.5.0.96",
  "oauthlib==3.2.2",
  "opencv-python==4.7.0.68",
  "packaging==23.0",
  "pillow==9.4.0",
  "protobuf==3.20.3",
  "pyasn1==0.4.8",
  "pyasn1-modules==0.2.8",
  "pyparsing==3.0.9",
  "python-dateutil==2.8.2",
  "pywavelets==1.4.1",
  "requests==2.28.2",
  "requests-oauthlib==1.3.1",
  "rsa==4.9",
  "scikit-image==0.19.3",
  "scipy==1.10.0",
  "six==1.16.0",
  "tensorboard==2.11.2",
  "tensorboard-data-server==0.6.1",
  "tensorboard-plugin-wit==1.8.1",
  "tifffile==2022.10.10",
  "torch==1.13.1",
  "torchvision==0.14.1",
  "tqdm==4.64.1",
  "typing-extensions==4.4.0",
  "urllib3==1.26.14",
  "werkzeug==2.2.2",
  "wheel==0.38.4",
  "zipp==3.11.0",
]

[tool.hatch.envs.default]
python = "39"
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/bfdn --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/bfdn/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
